--- a/public/index.html
+++ b/public/index.html
@@ -208,6 +208,6 @@
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
  <script src="index.js"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
- <script src="javascripts/"></script>
+ <script src="javascripts/script.js"></script>
 </body>
 </html>
