Edit href links

--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,9 @@
           </div>
           <ul class="nav-ul">
             <li><a href="">Home&ensp;&ensp;&ensp;&ensp;&ensp;</a></li>
-            <li><a href="">Menu&ensp;&ensp;&ensp;&ensp;&ensp;</a></li>
+            <li><a href="/menu">Menu&ensp;&ensp;&ensp;&ensp;&ensp;</a></li>
             <li class="wild-logo-li"><a class="wild-tiger-logo" href="index.html">Wild Tiger</a></li>
-            <li><a href="">Bar</a></li>
+            <li><a href="/bar">Bar</a></li>
             <li><a href="">Locations</a></li>
           </ul>
         </nav>
@@ -35,7 +35,7 @@
           <h4>Discover your taste</h4>
           <h1>NEW DINING EXPERIENCE</h1>
           <h3>Our dishes are made from fresh <br> ingredients</h3>
-          <a href="#" class="btn-orange">Discover Our Menu</a>
+          <a href="/menu" class="btn-orange">Discover Our Menu</a>
         </div>
   </header> 
 
@@ -117,7 +117,7 @@
       <h2>Amazing Bar</h2>
       <h3>Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit.</h3>
       <div class="btn-container">
-        <a href="#" class="btn-orange">Check Out The Bar</a>
+        <a href="/bar" class="btn-orange">Check Out The Bar</a>
     </div>
    </div>
   </section>
@@ -126,7 +126,7 @@
 <!-- Where to find us -->
 
 
-<section class="where-to--section clearfix">
+<section id="locations" class="where-to--section clearfix">
 <div class="where-to--main">
   <div class="where-to--head-text">
     <h2>Locations</h2>
@@ -176,10 +176,10 @@
       <div class="row">
         <div class="col span-1-of-2">
           <ul class="footer-nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Menu</a></li>
-            <li><a href="#">Bar</a></li>
-            <li><a href="#">Where To Find Us?</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/menu">Menu</a></li>
+            <li><a href="/bar">Bar</a></li>
+            <li><a href="#locations">Locations</a></li>
           </ul>
         </div>
   
