--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="stylesheets/style.css">
+  <link rel="stylesheet" href="stylesheets/animate.css">
   <title>Wild Tiger Restaurant</title>
 </head>
 <body>
@@ -19,7 +20,8 @@
           <ul class="nav-ul">
             <li><a href="">Home&ensp;&ensp;&ensp;&ensp;&ensp;</a></li>
             <li><a href="/menu">Menu&ensp;&ensp;&ensp;&ensp;&ensp;</a></li>
-            <li class="wild-logo-li"><a class="wild-tiger-logo" href="index.html">Wild Tiger</a></li>
+            <li class="wild-logo-li wild-logo-li-white"><a class="wild-tiger-logo wild-tiger-logo-white" href="/">Wild Tiger</a></li>
+            <li class="wild-logo-li wild-logo-li-black"><a class="wild-tiger-logo wild-tiger-logo-black" href="/">Wild Tiger</a></li>
             <li><a href="/bar">Bar</a></li>
             <li><a href="">Locations</a></li>
           </ul>
@@ -41,7 +43,7 @@
 
   <!-- About US -->
 
-  <section class="about-us">
+  <section id="about-us--js" class="about-us">
     <div class="about-us-img">
       <img src="images/About-Us-image.png" alt="">
     </div>
@@ -207,6 +209,7 @@
   
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+ <script src="javascripts/jquery.waypoints.min.js"></script>
  <script src="javascripts/script.js"></script>
 </body>
 </html>
