Add animations to home page

--- a/public/index.html
+++ b/public/index.html
@@ -146,7 +146,7 @@
     </div>
 
     
-    <a href="#" class="btn-orange">Go To Directions</a>
+    <a href="#" class="btn-orange location-get">Go To Directions</a>
   </div>
 </div>
   <div class="where-to--hours clearfix">
