Add responsive sticky nav

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
         <nav class="nav-home">
           <div class="logo-mobile">
             <img src="images/WildTiger-Logo.png" alt="">
+            <img src="images/WildTiger-logo-black.png" alt="">
           </div>
           <ul class="nav-ul">
             <li><a href="">Home&ensp;&ensp;&ensp;&ensp;&ensp;</a></li>
@@ -25,13 +26,13 @@
             <li><a href="/bar">Bar</a></li>
             <li><a href="">Locations</a></li>
           </ul>
-        </nav>
 
-        <div class="menu-toggle">
-          <div class="hamburgar"></div>
-        </div>
-      
-      </div>
+          <div class="menu-toggle sticky-toggle">
+              <div class="hamburgar"></div>
+            </div>
+          </div>
+    
+        </nav>
 
         <div class="hero-text">
           <h4>Discover your taste</h4>
