--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
             <li class="wild-logo-li wild-logo-li-white"><a class="wild-tiger-logo wild-tiger-logo-white" href="/">Wild Tiger</a></li>
             <li class="wild-logo-li wild-logo-li-black"><a class="wild-tiger-logo wild-tiger-logo-black" href="/">Wild Tiger</a></li>
             <li><a href="/bar">Bar</a></li>
-            <li><a href="">Locations</a></li>
+            <li><a href="#locations" class="go-to-locations">Locations</a></li>
           </ul>
 
           <div class="menu-toggle sticky-toggle">
@@ -147,7 +147,7 @@
     </div>
 
     
-    <a href="#" class="btn-orange location-get">Go To Directions</a>
+    <a href="https://www.google.com/maps/place/Wild+Tiger/@45.608278,-122.499132,17z/data=!4m5!3m4!1s0x5495bb495938b5b7:0xa3e862fb601c0350!8m2!3d45.6069159!4d-122.5023182" class="btn-orange location-get">Get Directions</a>
   </div>
 </div>
   <div class="where-to--hours clearfix">
