--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
 
   <section id="about-us--js" class="about-us">
     <div class="about-us-img">
-      <img src="images/About-Us-image.png" alt="">
+      <img src="images/about-us-image.jpg" alt="">
     </div>
 
     <div class="about-us-text">
