--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="stylesheets/preloader.css">
   <link rel="stylesheet" href="stylesheets/style.css">
   <link rel="stylesheet" href="stylesheets/animate.css">
   <title>Wild Tiger Restaurant</title>
 </head>
 <body>
-  <!-- HEADER --> 
+  <!-- Spinner -->
+  <!-- <div id="preloader">
+      <h1>Cooking in progress..</h1>
+      <div id="cooking">
+          <div class="bubble"></div>
+          <div class="bubble"></div>
+          <div class="bubble"></div>
+          <div class="bubble"></div>
+          <div class="bubble"></div>
+          <div id="area">
+              <div id="sides">
+                  <div id="pan"></div>
+                  <div id="handle"></div>
+              </div>
+              <div id="pancake">
+                  <div id="pastry"></div>
+              </div>
+          </div>
+      </div>
+    </div> -->
+<!-- HEADER --> 
   <header>
       <div class="header-top">
         <nav class="nav-home">
@@ -208,7 +229,7 @@
       </div>
     </footer>
   
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>  
  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
  <script src="javascripts/jquery.waypoints.min.js"></script>
  <script src="javascripts/script.js"></script>
