--- a/public/index.html
+++ b/public/index.html
@@ -212,13 +212,13 @@
             <li><a href="https://www.facebook.com" target="_blank">
                 <ion-icon name="logo-facebook"></ion-icon>
               </a></li>
-            <li><a href="#">
+            <li><a href="https://twitter.com/">
                 <ion-icon name="logo-twitter"></ion-icon>
               </a></li>
-            <li><a href="#">
+            <li><a href="https://plus.google.com">
                 <ion-icon name="logo-googleplus"></ion-icon>
               </a></li>
-            <li><a href="#">
+            <li><a href="https://www.instagram.com/">
                 <ion-icon name="logo-instagram"></ion-icon>
               </a></li>
           </ul>
@@ -226,6 +226,7 @@
       </div>
       <div class="row">
         <p>Copyright &copy; 2018 by Wild Tiger. All rights reserved.</p>
+        <p>Made With <span style="color: red; font-weight: bold;">Love</span> By Sami</p>
       </div>
     </footer>
   
