change meal-section 80% completed

--- a/public/index.html
+++ b/public/index.html
@@ -86,48 +86,80 @@
     <li>
       <figure>
         <img src="images/1.jpg" alt="Korean bibimbap with egg and vegetables">
+        <figcaption class="port-desc">
+          <p>Fresh Rolls</p>
+          <a href="/menu" class="btn btn-white btn-small">More</a>
+          </figcaption>
       </figure>
     </li>
     <li>
       <figure>
         <img src="images/2.jpg" alt="Simple italian pizza with cherry tomatoes ">
+        <figcaption class="port-desc">
+          <p>Coconut Prawn</p>
+          <a href="/menu" class="btn btn-white btn-small">More</a>
+          </figcaption>
       </figure>
     </li>
 
     <li>
       <figure>
         <img src="images/3.jpg" alt="Chicken breast steak with vegetables ">
+        <figcaption class="port-desc">
+          <p>Crispy Tofu</p>
+          <a href="/menu" class="btn btn-white btn-small">More</a>
+          </figcaption>
       </figure>
     </li>
 
-    <li>
+    <li class="display-none">
       <figure>
         <img src="images/4.jpg" alt="Autumn pumpkin soup">
+        <figcaption class="port-desc">
+          <p>Shrimp Wonton Soup<p>
+          <a href="/menu" class="btn btn-white btn-small">More</a>
+          </figcaption>
       </figure>
     </li>
 
   </ul>
   <ul class="meals-show clearfix">
-    <li>
+    <li class="display-none">
       <figure>
         <img src="images/5.jpg" alt="Paleo beef steak with vegetables">
+        <figcaption class="port-desc">
+          <p>Beef Salad</p>
+          <a href="/menu" class="btn btn-white btn-small">More</a>
+          </figcaption>
       </figure>
     </li>
-    <li>
+    <li class="display-none">
       <figure>
         <img src="images/6.jpg" alt="Healthy baguette with egg and vegetables">
+        <figcaption class="port-desc">
+          <p>Crispy Calamari</p>
+          <a href="/menu" class="btn btn-white btn-small">More</a>
+          </figcaption>
       </figure>
     </li>
 
-    <li>
+    <li class="display-none">
       <figure>
         <img src="images/7.jpg" alt="Burger with cheddar and bacon ">
+        <figcaption class="port-desc">
+          <p>Stir-Fried Fresh Ginger<p>
+          <a href="/menu" class="btn btn-white btn-small">More</a>
+          </figcaption>
       </figure>
     </li>
 
-    <li>
+    <li class="display-none">
       <figure>
         <img src="images/8.jpg" alt="Granola with cherries and strawberries">
+        <figcaption class="port-desc">
+          <p>Pad Woon-Sen</p>
+          <a href="/menu" class="btn btn-white btn-small">More</a>
+          </figcaption>
       </figure>
     </li>
 
