--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="stylesheets/preloader.css">
   <link rel="stylesheet" href="stylesheets/style.css">
   <link rel="stylesheet" href="stylesheets/animate.css">
   <title>Wild Tiger Restaurant</title>
@@ -21,26 +20,6 @@
 
 </head>
 <body>
-  <!-- Spinner -->
-  <!-- <div id="preloader">
-      <h1>Cooking in progress..</h1>
-      <div id="cooking">
-          <div class="bubble"></div>
-          <div class="bubble"></div>
-          <div class="bubble"></div>
-          <div class="bubble"></div>
-          <div class="bubble"></div>
-          <div id="area">
-              <div id="sides">
-                  <div id="pan"></div>
-                  <div id="handle"></div>
-              </div>
-              <div id="pancake">
-                  <div id="pastry"></div>
-              </div>
-          </div>
-      </div>
-    </div> -->
 <!-- HEADER --> 
   <header>
       <div class="header-top">
@@ -89,14 +68,14 @@
   </section>
 
   
-<!-- Meals Photo's -->
+<!-- Meals Section -->
 
 <section class="meals">
-  <ul class="meals-show clearfix">
+  <ul class="meals-section clearfix">
     <li>
       <figure>
-        <img src="images/1.jpg" alt="Korean bibimbap with egg and vegetables">
-        <figcaption class="port-desc">
+        <img src="images/1.jpg" alt="Fresh Rolls">
+        <figcaption class="meals-image-desc">
           <p>Fresh Rolls</p>
           <a href="/menu" class="btn btn-white btn-small">More</a>
           </figcaption>
@@ -104,8 +83,8 @@
     </li>
     <li>
       <figure>
-        <img src="images/2.jpg" alt="Simple italian pizza with cherry tomatoes ">
-        <figcaption class="port-desc">
+        <img src="images/2.jpg" alt="Coconut Prawn">
+        <figcaption class="meals-image-desc">
           <p>Coconut Prawn</p>
           <a href="/menu" class="btn btn-white btn-small">More</a>
           </figcaption>
@@ -114,8 +93,8 @@
 
     <li>
       <figure>
-        <img src="images/3.jpg" alt="Chicken breast steak with vegetables ">
-        <figcaption class="port-desc">
+        <img src="images/3.jpg" alt="Crispy Tofu">
+        <figcaption class="meals-image-desc">
           <p>Crispy Tofu</p>
           <a href="/menu" class="btn btn-white btn-small">More</a>
           </figcaption>
@@ -124,8 +103,8 @@
 
     <li class="display-none">
       <figure>
-        <img src="images/4.jpg" alt="Autumn pumpkin soup">
-        <figcaption class="port-desc">
+        <img src="images/4.jpg" alt="Shrimp Wonton Soup">
+        <figcaption class="meals-image-desc">
           <p>Shrimp Wonton Soup<p>
           <a href="/menu" class="btn btn-white btn-small">More</a>
           </figcaption>
@@ -133,11 +112,11 @@
     </li>
 
   </ul>
-  <ul class="meals-show clearfix">
+  <ul class="meals-section clearfix">
     <li class="display-none">
       <figure>
-        <img src="images/5.jpg" alt="Paleo beef steak with vegetables">
-        <figcaption class="port-desc">
+        <img src="images/5.jpg" alt="Beef Salad">
+        <figcaption class="meals-image-desc">
           <p>Beef Salad</p>
           <a href="/menu" class="btn btn-white btn-small">More</a>
           </figcaption>
@@ -145,8 +124,8 @@
     </li>
     <li class="display-none">
       <figure>
-        <img src="images/6.jpg" alt="Healthy baguette with egg and vegetables">
-        <figcaption class="port-desc">
+        <img src="images/6.jpg" alt="Crispy Calamari">
+        <figcaption class="meals-image-desc">
           <p>Crispy Calamari</p>
           <a href="/menu" class="btn btn-white btn-small">More</a>
           </figcaption>
@@ -155,8 +134,8 @@
 
     <li class="display-none">
       <figure>
-        <img src="images/7.jpg" alt="Burger with cheddar and bacon ">
-        <figcaption class="port-desc">
+        <img src="images/7.jpg" alt="Stir-Fried Fresh Ginger">
+        <figcaption class="meals-image-desc">
           <p>Stir-Fried Fresh Ginger<p>
           <a href="/menu" class="btn btn-white btn-small">More</a>
           </figcaption>
@@ -165,8 +144,8 @@
 
     <li class="display-none">
       <figure>
-        <img src="images/8.jpg" alt="Granola with cherries and strawberries">
-        <figcaption class="port-desc">
+        <img src="images/8.jpg" alt="Pad Woon-Sen">
+        <figcaption class="meals-image-desc">
           <p>Pad Woon-Sen</p>
           <a href="/menu" class="btn btn-white btn-small">More</a>
           </figcaption>
